--- a/lib/cfclient/ui/dialogs/inputconfigdialogue.ui
+++ b/lib/cfclient/ui/dialogs/inputconfigdialogue.ui
@@ -9,14 +9,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>957</width>
-    <height>512</height>
+    <width>800</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Input device configuration</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
@@ -24,12 +30,12 @@
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>40</height>
+         <height>21</height>
         </size>
        </property>
        <property name="font">
         <font>
-         <pointsize>16</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -42,31 +48,6 @@
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="font">
-          <font>
-           <pointsize>14</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Input device</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="inputDeviceSelector">
-         <property name="minimumSize">
-          <size>
-           <width>700</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="duplicatesEnabled">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="2">
         <widget class="QPushButton" name="configButton">
          <property name="enabled">
@@ -83,6 +64,31 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Input device</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="inputDeviceSelector">
+         <property name="minimumSize">
+          <size>
+           <width>550</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="duplicatesEnabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item>
@@ -92,7 +98,7 @@
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>350</height>
+           <height>330</height>
           </size>
          </property>
          <property name="maximumSize">
@@ -110,7 +116,7 @@
             <x>-1</x>
             <y>19</y>
             <width>301</width>
-            <height>141</height>
+            <height>121</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
@@ -252,10 +258,10 @@
          <widget class="QWidget" name="gridLayoutWidget_4">
           <property name="geometry">
            <rect>
-            <x>310</x>
+            <x>330</x>
             <y>20</y>
             <width>301</width>
-            <height>141</height>
+            <height>121</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
@@ -400,9 +406,9 @@
          <widget class="QWidget" name="gridLayoutWidget_5">
           <property name="geometry">
            <rect>
-            <x>10</x>
-            <y>170</y>
-            <width>518</width>
+            <x>0</x>
+            <y>140</y>
+            <width>415</width>
             <height>151</height>
            </rect>
           </property>
@@ -504,13 +510,16 @@
          <widget class="QWidget" name="gridLayoutWidget_2">
           <property name="geometry">
            <rect>
-            <x>600</x>
-            <y>158</y>
+            <x>430</x>
+            <y>140</y>
             <width>292</width>
             <height>194</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
+           <property name="spacing">
+            <number>0</number>
+           </property>
            <item row="5" column="1">
             <widget class="QPushButton" name="detectAlt2">
              <property name="enabled">
@@ -707,7 +716,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>400</width>
+           <width>300</width>
            <height>0</height>
           </size>
          </property>
